@@ -34,3 +34,9 @@ Initial public release
 * r2648, konstantin, 01-24-08 11:12:00
   * net_fix.rb moved from right_aws gem to fix the problem with uploading the streamable
     objects to S3
+
+* ????, konstantin, 02-02-08 23:56:00 +03:00
+  * "RightAws: incompatible Net::HTTP monkey-patch" exception is raised if our net_fix
+    patch was overriden (by attachment_fu for example, to avoid this load attachment_fu 
+    before loading the right_http_connection gem).
+    
